--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -20,7 +20,7 @@
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
-      <div class="navbar-nav ms-auto">
+      <!-- <div class="navbar-nav ms-auto">
         <form class="d-flex" role="search">
           <input
             class="form-control me-2 search-inp"
@@ -31,7 +31,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </form>
-      </div>
+      </div> -->
       <div class="navbar-nav ms-auto">
         <i class="fa-solid fa-circle-half-stroke" id="theme"></i>
 
